--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     signingConfigs {
     }
     compileSdkVersion 25
-    buildToolsVersion "25.0.0"
+    buildToolsVersion "25.0.3"
     defaultConfig {
         applicationId "de.framersoft.easypasswordgenerator"
         minSdkVersion 16
@@ -49,5 +49,6 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     compile 'com.google.android.gms:play-services-ads:11.0.4'
     compile 'com.android.support:support-v4:25.3.1'
+    compile 'de.halfbit:pinned-section-listview:1.0.0'
     testCompile 'junit:junit:4.12'
 }
