--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,19 +3,15 @@ apply plugin: 'com.android.application'
 android {
     signingConfigs {
     }
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion 27
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "de.framersoft.easypasswordgenerator"
         minSdkVersion 16
-        targetSdkVersion 25
+        targetSdkVersion 27
         versionCode 9
         versionName "1.1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
-        jackOptions {
-            enabled true
-        }
     }
     buildTypes {
         release {
@@ -44,19 +40,19 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile files('libs/common-1_0_3.jar')
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:gridlayout-v7:25.3.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:cardview-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.google.android.gms:play-services-ads:11.0.4'
-    compile 'com.android.support:support-v4:25.3.1'
-    compile 'de.halfbit:pinned-section-listview:1.0.0'
-    compile 'io.github.kobakei:ratethisapp:1.2.0'
-    testCompile 'junit:junit:4.12'
+    implementation files('libs/common-1_0_3.jar')
+    implementation 'com.android.support:appcompat-v7:27.1.0'
+    implementation 'com.android.support:gridlayout-v7:27.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:cardview-v7:27.1.0'
+    implementation 'com.android.support:design:27.1.0'
+    implementation 'com.google.android.gms:play-services-ads:12.0.1'
+    implementation 'com.android.support:support-v4:27.1.0'
+    implementation 'de.halfbit:pinned-section-listview:1.0.0'
+    implementation 'io.github.kobakei:ratethisapp:1.2.0'
+    testImplementation 'junit:junit:4.12'
 }
